--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
-    "ytdl-core": "^4.5.0"
+    "ffmpeg-static": "^5.0.2",
+    "ytdl-core": "^4.11.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
