--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,10 @@ services:
   - type: web
     name: youtube-downloader
     env: python
-    plan: free
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python main.py"
+    startCommand: "python app.py"
     envVars:
       - key: FLASK_ENV
         value: production
+      - key: PORT
+        value: 10000
